<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/location_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context=".activities.LocationSelectionActivity"
        tools:ignore="FragmentTagUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="@dimen/general_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/general_padding"
            android:gravity="center_horizontal"
            android:text="@string/select_location"
            android:textAlignment="center"
            android:textSize="@dimen/header_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="@dimen/regular_text_size" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="address"
            android:hint="@string/address_hint"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_address"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/regular_text_size"
                android:text="@string/update_address"
                app:icon="@drawable/done" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/gps"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/regular_text_size"
                android:text="@string/get_location"
                app:icon="@drawable/gps" />

        </LinearLayout>

        <TextView
            android:id="@+id/lat_long_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/general_padding"
            android:textSize="@dimen/regular_text_size"
            android:text="@string/sample_lon_lat"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/set_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/regular_text_size"
            android:text="@string/set_location" />

    </LinearLayout>


</LinearLayout>
