<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/general_padding"
    android:paddingTop="@dimen/general_padding"
    android:paddingRight="@dimen/general_padding"
    android:paddingBottom="@dimen/general_padding"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_title"
        android:textSize="@dimen/headerSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/general_padding"
        android:paddingBottom="@dimen/general_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="@dimen/general_padding"
            android:paddingRight="@dimen/general_padding"
            android:text="@string/username_label"
            android:textSize="@dimen/regularSize" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="username"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:textSize="@dimen/regularSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/general_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="@dimen/general_padding"
            android:paddingRight="@dimen/general_padding"
            android:text="@string/password_label"
            android:textSize="@dimen/regularSize" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/regularSize" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/general_padding"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginButton"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/azure_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/general_padding"
            android:layout_marginRight="@dimen/general_padding"
            android:layout_weight="1"
            android:text="@string/login_text"
            android:onClick="login"/>

        <Button
            android:id="@+id/registerButton"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/azure_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/general_padding"
            android:layout_marginRight="@dimen/general_padding"
            android:layout_weight="1"
            android:text="@string/register_text"
            android:onClick="register"/>
    </LinearLayout>

    <TextView
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>